--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
         <h5>heading 5</h5>
         <h6>heading 6</h6>
         <p>Git Hub</p>
+        <img src="./img/flowers.jpg" alt="flowers" width="600">
     </body>
 </html>
