Lists, favicon, links

--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <html>
     <head>
         <title>My first web page</title>
+        <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
     </head>
     <body>
         <!-- Comment in HTML -->
         <h1>heading number 1</h1>
         <h2>heading number 2</h2>
+        <a name="top">
         <p>Hello HTML!</p>
         <h2>repeated heading number 2</h2>
         <p>repeated <strong>strong</strong>heading <em>emphatic</em>number 2</p>
@@ -15,5 +17,25 @@
         <h6>heading 6</h6>
         <p>Git Hub</p>
         <img src="./img/flowers.jpg" alt="flowers" width="600">
+        <img src="https://aprendelibvrefiles.blob.core.windows.net/aprendelibvre-container/course/creacion_de_sitios_web/image/imgscursoweb-01_xl.png" alt="URL" height="400" width="600">
+        <h2>Unordered list of fruits</h2>
+        <ul>
+            <li>Apple</li>
+            <li>Orange</li>
+            <li>Strawberry</li>
+            <li>Grape</li>
+        </ul>
+        <h2>Ordered list of beautiful places:</h2>
+        <ol>
+            <li>Beach</li>
+            <li>Wood</li>
+            <li>City</li>
+            <li>Museum</li>
+        </ol>
+        Links
+        <a href="#top">Top</a>
+        <a href="./link.html">Link page</a>
+        <br>
+        <a href="https://edu.gcfglobal.org/es/creacion-de-sitios-web/que-es-una-url/1/#" target="_blank">URL page</a>
     </body>
 </html>
