--- a/link.html
+++ b/link.html
@@ -7,6 +7,62 @@
     <title>Link page</title>
 </head>
 <body>
-    <p>This is the link page</p>
-</body>
+    <p>This is the &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;link page</p>
+    <pre>
+        I like singing
+            I like running too
+    </pre>
+    <cite>Information is power</cite>
+    <table border="1">
+        <caption>DAM1</caption>
+        <thead>
+            <tr>
+                <th colspan="6">Time Table</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <th rowspan="6">Hours</th>
+                <th>Mon</th>
+                <th>Tue</th>
+                <th>Wed</th>
+                <th>Thu</th>
+                <th>Fri</th>
+            </tr>
+            <tr>
+                <td>Math</td>
+                <td>Science</td>
+                <td>Math</td>
+                <td>Science</td>
+                <td>Arts</td>
+            </tr>
+            <tr>
+                <td>Math</td>
+                <td>Science</td>
+                <td>Math</td>
+                <td>Science</td>
+                <td>Arts</td>
+            </tr>
+            <tr>
+                <td colspan="5">Lunch</td>
+            </tr>
+            <tr>
+                <td>Math</td>
+                <td>Science</td>
+                <td>Math</td>
+                <td colspan="2" rowspan="2">Project</td>
+            </tr>
+            <tr>
+                <td>Math</td>
+                <td>Science</td>
+                <td>Math</td>
+            </tr>
+        </tbody>
+        <tfoot>
+
+        </tfoot>
+        <h2>Lorem ipsum dolor sit amet.</h2>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cum aliquam culpa alias soluta magni aut possimus, officiis cupiditate iste quasi.</p>
+        <img src="https://picsum.photos/id/1029/600/400" alt="City" height="400" width="600">
+    </body>
 </html>
