--- a/forms.html
+++ b/forms.html
@@ -9,10 +9,10 @@
 </head>
 
 <body>
-    <h1>Forms</h1>
+    <h1 style="background-color:blue;color:aqua;padding:1.5em">Forms</h1>
     <form action="nothing.php" method="GET">
         <fieldset>
-            <legend>Login</legend>
+            <legend style="background-color: brown;color:antiquewhite;padding:1em">Login</legend>
             <label for="name">Name:</label>
             <input type="text" name="name" id="name">
             <hr>
