--- a/index.html
+++ b/index.html
@@ -2,6 +2,35 @@
     <head>
         <title>My first web page</title>
         <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
+        <style>
+            h1{
+                background-color: coral;
+                color:cornflowerblue;
+                padding:2em;
+            }
+            h2{
+                background-color:#112233;
+                color:#FFEEAA;
+                padding:1.35em;
+               border-radius:20px;
+               border-width:5px 2px 5px 2px;
+               border-style:solid;
+               border-color:crimson;
+            }
+            img{
+                border-radius:50%;
+            }
+            p{
+                background-color:chartreuse;
+                color:crimson;
+                border-top: 20px;
+                border-bottom:20px;
+                border-left:30px;
+                border-right:30px;
+                border-color:blue;
+                border-style:dotted;
+            }
+        </style>
     </head>
     <body>
         <!-- Comment in HTML -->
